544-circuit-breaking/5442/argo-rollouts/destination-rule-reviews.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews-argo
spec:
  host: reviews
  subsets:
    - name: stable
      labels:
        app: reviews
    - name: canary
      labels:
        app: reviews
